fix layout issues for homepage

--- a/css/home-page.styl
+++ b/css/home-page.styl
@@ -2,8 +2,10 @@
   color inherit
 
   .content-container
+    margin 0 auto
     margin-top 10%
-
+    min-width 1090px
+    
   .call-to-action
     float left
     font-family MAIN_FONT_FAMILY
